# AutoDRIVE-F1TENTH-Sim-Racing

./: .gitignore  README.md  autodrive_devkit.Dockerfile  autodrive_devkit.sh  compose.yaml
autodrive_devkit/ws/src/autodrive_f1tenth/: pyproject.toml  setup.py
autodrive_devkit/ws/src/autodrive_f1tenth/rviz/: simulator.rviz
autodrive_devkit/ws/src/autodrive_f1tenth/test/: follow_the_gap_Marcus.py
autodrive_devkit/ws/src/f1tenth_description/: CMakeLists.txt  package.xml
autodrive_devkit/ws/src/f1tenth_description/launch/: bringup.launch.py
autodrive_devkit/ws/src/f1tenth_description/urdf/: f1tenth_car.urdf.xacro
autodrive_devkit/ws/src/f1tenth_dynsim/: CMakeLists.txt  package.xml
autodrive_devkit/ws/src/f1tenth_dynsim/config/: ekf.yaml  nav2_params.yaml
autodrive_devkit/ws/src/f1tenth_dynsim/launch/: gazebo_f1tenth_dynsim.launch.py
autodrive_devkit/ws/src/f1tenth_dynsim/models/PistaMonza/: model.config  model.sdf
autodrive_devkit/ws/src/f1tenth_dynsim/models/PistaMonza/meshes/: Pista1.dae
autodrive_devkit/ws/src/f1tenth_dynsim/scripts/: twist_to_actuators.py
autodrive_devkit/ws/src/f1tenth_dynsim/src/: f1tenth_interface_plugin.cpp
autodrive_devkit/ws/src/f1tenth_dynsim/worlds/: monza.world
autodrive_devkit/ws/src/install/: local_setup.sh  setup.sh
autodrive_devkit/ws/src/install/autodrive_f1tenth/lib/autodrive_f1tenth/: autodrive_bridge  teleop_keyboard
autodrive_devkit/ws/src/install/autodrive_f1tenth/share/autodrive_f1tenth/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
autodrive_devkit/ws/src/install/autodrive_f1tenth/share/autodrive_f1tenth/rviz/: simulator.rviz
autodrive_devkit/ws/src/install/f1tenth_dynsim/share/f1tenth_dynsim/: package.bash  package.zsh
autodrive_devkit/ws/src/log/: latest_build
