<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_dynsim</name>
  <version>0.1.0</version>
  <description>Dynamic actuator plugin (steer/throttle/brake) and bridges for F1TENTH Ackermann in Gazebo.</description>

  <maintainer email="marcusvini178@usp.br">Marcus Vinicius</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
